--- a/TerrarianAbilites.csproj
+++ b/TerrarianAbilites.csproj
@@ -10,4 +10,10 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Buffs\" />
+    <Folder Include="UIElements\" />
+    <Folder Include="NPCs\" />
+    <Folder Include="Players\" />
+  </ItemGroup>
 </Project>
